--- a/src/scss/icons/demo.html
+++ b/src/scss/icons/demo.html
@@ -9,11 +9,56 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;12)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;17)</small></h1>
+    </div>
+    <div class="clearfix mhl ptl">
+        <h1 class="mvm mtn fgc1">Grid Size: 24</h1>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-user"></span>
+                <span class="mls"> icon-user</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e908" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe908;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-menu-skills"></span>
+                <span class="mls"> icon-menu-skills</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e906" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe906;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-menu-timeline"></span>
+                <span class="mls"> icon-menu-timeline</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e907" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe907;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
-        <div class="glyph fs1">
+        <div class="glyph fs2">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-svelte"></span>
                 <span class="mls"> icon-svelte</span>
@@ -30,7 +75,21 @@
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 14</h1>
-        <div class="glyph fs2">
+        <div class="glyph fs3">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-menu-contact"></span>
+                <span class="mls"> icon-menu-contact</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e909" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe909;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs3">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-heart"></span>
                 <span class="mls"> icon-heart</span>
@@ -44,7 +103,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs3">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-envelope-o"></span>
                 <span class="mls"> icon-envelope-o</span>
@@ -61,7 +120,7 @@
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 20</h1>
-        <div class="glyph fs3">
+        <div class="glyph fs4">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-checkmark"></span>
                 <span class="mls"> icon-checkmark</span>
@@ -78,7 +137,7 @@
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 16</h1>
-        <div class="glyph fs4">
+        <div class="glyph fs5">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-check-alt"></span>
                 <span class="mls"> icon-check-alt</span>
@@ -92,7 +151,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs4">
+        <div class="glyph fs5">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-mouse"></span>
                 <span class="mls"> icon-mouse</span>
@@ -106,10 +165,24 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs4">
+        <div class="glyph fs5">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-project"></span>
-                <span class="mls"> icon-project</span>
+                <span class="icon-portfolio-item"></span>
+                <span class="mls"> icon-portfolio-item</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e924" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe924;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="file-empty, file3" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs5">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-menu-portolio"></span>
+                <span class="mls"> icon-menu-portolio</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e925" class="unit size1of2" />
@@ -120,7 +193,7 @@
                 <input type="text" readonly value="files-empty, files" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs4">
+        <div class="glyph fs5">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-whatsapp"></span>
                 <span class="mls"> icon-whatsapp</span>
@@ -134,7 +207,7 @@
                 <input type="text" readonly value="whatsapp, brand13" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs4">
+        <div class="glyph fs5">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-github"></span>
                 <span class="mls"> icon-github</span>
@@ -148,7 +221,7 @@
                 <input type="text" readonly value="github, brand40" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs4">
+        <div class="glyph fs5">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-linkedin"></span>
                 <span class="mls"> icon-linkedin</span>
@@ -162,7 +235,7 @@
                 <input type="text" readonly value="linkedin, brand64" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs4">
+        <div class="glyph fs5">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-linkedin2"></span>
                 <span class="mls"> icon-linkedin2</span>
@@ -176,7 +249,7 @@
                 <input type="text" readonly value="linkedin2, brand65" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs4">
+        <div class="glyph fs5">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-stackoverflow"></span>
                 <span class="mls"> icon-stackoverflow</span>
