--- a/src/scss/icons/demo.html
+++ b/src/scss/icons/demo.html
@@ -9,46 +9,18 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;17)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;22)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 24</h1>
+        <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-user"></span>
-                <span class="mls"> icon-user</span>
+                <span class="icon-medal"></span>
+                <span class="mls"> icon-medal</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e908" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe908;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-menu-skills"></span>
-                <span class="mls"> icon-menu-skills</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e906" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe906;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-menu-timeline"></span>
-                <span class="mls"> icon-menu-timeline</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e907" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe907;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e90a" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe90a;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
@@ -74,15 +46,15 @@
         </div>
     </div>
     <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 14</h1>
+        <h1 class="mvm mtn fgc1">Grid Size: 24</h1>
         <div class="glyph fs3">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-menu-contact"></span>
-                <span class="mls"> icon-menu-contact</span>
+                <span class="icon-user"></span>
+                <span class="mls"> icon-user</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e909" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe909;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e908" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe908;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
@@ -91,12 +63,12 @@
         </div>
         <div class="glyph fs3">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-heart"></span>
-                <span class="mls"> icon-heart</span>
+                <span class="icon-menu-skills"></span>
+                <span class="mls"> icon-menu-skills</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e905" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe905;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e906" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe906;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
@@ -105,12 +77,12 @@
         </div>
         <div class="glyph fs3">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-envelope-o"></span>
-                <span class="mls"> icon-envelope-o</span>
+                <span class="icon-menu-timeline"></span>
+                <span class="mls"> icon-menu-timeline</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e903" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe903;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e907" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe907;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
@@ -261,6 +233,107 @@
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
                 <input type="text" readonly value="stackoverflow, brand71" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs5">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-ribbon"></span>
+                <span class="mls"> icon-ribbon</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e9d2" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe9d2;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="bookmark, ribbon" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs5">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-play"></span>
+                <span class="mls"> icon-play</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="ea1c" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xea1c;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="play3, player8" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs5">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-pause"></span>
+                <span class="mls"> icon-pause</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="ea1d" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xea1d;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="pause2, player9" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs5">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-stop"></span>
+                <span class="mls"> icon-stop</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="ea1e" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xea1e;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="stop2, player10" class="liga unitRight" />
+            </div>
+        </div>
+    </div>
+    <div class="clearfix mhl ptl">
+        <h1 class="mvm mtn fgc1">Grid Size: 14</h1>
+        <div class="glyph fs6">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-menu-contact"></span>
+                <span class="mls"> icon-menu-contact</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e909" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe909;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs6">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-heart"></span>
+                <span class="mls"> icon-heart</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e905" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe905;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs6">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-envelope-o"></span>
+                <span class="mls"> icon-envelope-o</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e903" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe903;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
     </div>
